# docx-font-extractor

./: README.md  pyproject.toml
docxfontext/: __init__.py  extractor.py  main.py  odttf.py
